--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "bootstrap": "^4.1.2",
     "firebase": "^5.2.0",
     "jquery": "^3.3.1",
+    "prettier": "^1.14.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-modal": "^3.5.1",
